Java 11 related changes